tests/failing/1-byte_literal_out_of_range/main.rgo
byte: @byte
exit: @exit

print_byte: (value: byte, ok:()) {
    ok()
}

main: () {
    print_byte(256, exit(0))
}
